<resources>
	<string name="app_name">Ping Me</string>

	<string name="hello_world">Hello world!</string>
	<string name="redirecting_text_view">Redirecting!</string>
	<string name="action_settings">Settings</string>
	<string name="phone_number_edit_text">Phone Number</string>
	<string name="email_edit_text">Email</string>
	<string name="username_edit_text">Username</string>
	<string name="password_edit_text">Password</string>
	<string name="password_confirm_edit_text">Confirm Password</string>
	<string name="login_button">Login</string>
	<string name="register_button">Register</string>

	<string name="passwords_dont_match">Sorry, the passwords don\'t match!</string>

	<string-array name="cant_be_empty">
		<item>Username cannot be empty</item>
		<item>Password cannot be empty</item>
		<item>Password confirmation cannot be empty</item>
		<item>Email cannot be empty</item>
	</string-array>
	<string name="title_activity_main">MainActivity</string>
</resources>
