<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".LoginActivity">

	<EditText
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:ems="10"
		android:id="@+id/username_edit_text"
		android:hint="@string/username_edit_text"
		android:gravity="center_vertical|center_horizontal"
		android:layout_alignParentTop="true"
		android:layout_marginTop="36dp"
		android:layout_alignParentRight="true"
		android:layout_alignParentEnd="true"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:inputType="textNoSuggestions"/>

	<EditText
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:inputType="textPassword"
		android:ems="10"
		android:id="@+id/password_edit_text"
		android:hint="@string/password_edit_text"
		android:gravity="center_vertical|center_horizontal"
		android:layout_below="@+id/username_edit_text"
		android:layout_alignParentRight="true"
		android:layout_alignParentEnd="true"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"/>

	<EditText
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:inputType="textPassword"
		android:ems="10"
		android:id="@+id/password_confirm_edit_text"
		android:hint="@string/password_confirm_edit_text"
		android:gravity="center_vertical|center_horizontal"
		android:layout_below="@+id/password_edit_text"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:layout_alignParentRight="true"
		android:layout_alignParentEnd="true"
		/>

	<EditText
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:inputType="textEmailAddress"
		android:ems="10"
		android:id="@+id/email_edit_text"
		android:layout_below="@+id/password_confirm_edit_text"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:layout_alignParentRight="true"
		android:layout_alignParentEnd="true"
		android:gravity="center_vertical|center_horizontal"
		android:hint="@string/email_edit_text"/>

	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/login_button"
		android:id="@+id/login_button"
		android:layout_centerVertical="true"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:layout_alignParentRight="true"
		android:layout_alignParentEnd="true"
		style="?android:attr/borderlessButtonStyle"/>

	<Button
		style="?android:attr/borderlessButtonStyle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/register_button"
		android:id="@+id/register_button"
		android:layout_below="@+id/login_button"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:layout_alignParentRight="true"
		android:layout_alignParentEnd="true"/>

</RelativeLayout>
